--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
 
   file_picker: ^2.0.0
-  video_player: ^0.11.0
+  video_player: ^0.11.1+2
   flutter_ffmpeg: ^0.3.0
   video_thumbnail: ^0.2.1
   path_provider: ^1.6.7
